--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nuts",
   "version": "0.1.0",
+  "homepage": "https://Cyparta.github.io/nutsFront",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -32,6 +33,8 @@
     "yup": "^1.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -56,6 +59,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-slick": "^0.23.10"
+    "@types/react-slick": "^0.23.10",
+    "gh-pages": "^5.0.0"
   }
 }
